welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: Missing closing brace `}' assumed here
var nbPas = 0
^Variables:7: error: ';' expected but ')' found.
)
^